--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    overflow-x: hidden;
+}
 
 .page-padding{
     padding: 100px 0px;
@@ -55,4 +58,101 @@
 
 .dropdown-menu .nav-link{
      color: var(--white-color);
+}
+
+.hero-section{
+    height: 490px;
+}
+
+.footer-container{
+    background-color: #222222;
+    color: #ffffff;
+    padding: 20px 10px;
+}
+
+.footer-logo{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 40px 0px;
+}
+.footer-logo img{
+    width: 150px;
+   
+} 
+.footer-content h5 {
+    position: relative;
+    display: inline-block; 
+}
+
+.footer-content h5::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    height: 4px;
+    width: 50%;          
+    background-color: #e64f24;
+    border-radius: 30px;
+    transform-origin: left;
+    
+}
+
+.footer-links{
+    padding: 20px 0px;
+}
+
+.footer-links ul{
+    padding-left: 0px;
+    margin-bottom: 0px;
+  
+}
+.footer-links ul li{
+    list-style: none;
+    margin-left: 0px;
+}
+.footer-links ul li a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.footer-links ul li a:hover{
+    color: #e64f24;
+}
+
+.footer-dorpdown:hover > ul{
+    display: block;
+}
+.footer-dorpdown ul{
+    display: none;
+    background-color: #000000;
+    padding: 5px ;
+    border-radius: 6px;
+  
+}
+
+
+
+.footer-dorpdown p{
+    margin-bottom: 0px;
+}
+.footer-dorpdown p:hover{
+    color: #e64f24;
+    cursor: pointer;
+}
+.footer-dorpdown p:after {
+    display: inline-block;
+    margin-left: .255em;
+    vertical-align: .255em;
+    content: "";
+    border-top: .3em solid;
+    border-right: .3em solid transparent;
+    border-bottom: 0;
+    border-left: .3em solid transparent;
+    margin-bottom: 0px;
+}
+
+.social-connecting-icon{
+    display: flex;
+    gap: 15px;
 }
