--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ body{
 }
 
 .hero-section{
-    height: 490px;
+    height: 240px;
 }
 
 .footer-container{
@@ -72,7 +72,7 @@ body{
 
 .footer-logo{
     display: flex;
-    align-items: flex-start;
+    align-self: start;
     justify-content: center;
     padding: 40px 0px;
 }
@@ -110,8 +110,10 @@ body{
 .footer-links ul li{
     list-style: none;
     margin-left: 0px;
+    margin-bottom: 6px;
 }
 .footer-links ul li a{
+    font-size: 14px;
     text-decoration: none;
     color: #ffffff;
 }
