--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 .page-padding{
-    padding: 100px 0px;
+    padding: 70px 0px;
 }
 
 :root{
@@ -60,10 +60,7 @@ body{
      color: var(--white-color);
 }
 
-.hero-section{
-    height: 240px;
-}
-
+/* ---------------------footer------------------ */
 .footer-container{
     background-color: #222222;
     color: #ffffff;
@@ -74,11 +71,10 @@ body{
     display: flex;
     align-self: start;
     justify-content: center;
-    padding: 40px 0px;
+    padding: 0px 0px;
 }
 .footer-logo img{
     width: 150px;
-   
 } 
 .footer-content h5 {
     position: relative;
@@ -95,7 +91,6 @@ body{
     background-color: #e64f24;
     border-radius: 30px;
     transform-origin: left;
-    
 }
 
 .footer-links{
@@ -113,45 +108,12 @@ body{
     margin-bottom: 6px;
 }
 .footer-links ul li a{
-    font-size: 14px;
     text-decoration: none;
     color: #ffffff;
 }
 
 .footer-links ul li a:hover{
     color: #e64f24;
-}
-
-.footer-dorpdown:hover > ul{
-    display: block;
-}
-.footer-dorpdown ul{
-    display: none;
-    background-color: #000000;
-    padding: 5px ;
-    border-radius: 6px;
-  
-}
-
-
-
-.footer-dorpdown p{
-    margin-bottom: 0px;
-}
-.footer-dorpdown p:hover{
-    color: #e64f24;
-    cursor: pointer;
-}
-.footer-dorpdown p:after {
-    display: inline-block;
-    margin-left: .255em;
-    vertical-align: .255em;
-    content: "";
-    border-top: .3em solid;
-    border-right: .3em solid transparent;
-    border-bottom: 0;
-    border-left: .3em solid transparent;
-    margin-bottom: 0px;
 }
 
 .social-connecting-icon{
